--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin | Smart Health Now</title>
+    <title>Dr. Chuxy Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
